--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
 <body>
 <div id="app">
   <aside id="tags"></aside>
-  <aside id="posts"></aside>
+  <aside id="posts">
+    <div class="posts-header">
+      <button id="toggle-tags">☰</button>
+      <input id="search" placeholder="Search" />
+    </div>
+    <div id="post-list"></div>
+  </aside>
   <main id="content">
+    <div class="content-header">
+      <div class="traffic">
+        <span class="dot red" id="back"></span>
+        <span class="dot yellow" id="about"></span>
+        <span class="dot green" id="fullscreen"></span>
+      </div>
+      <button id="share">Share</button>
+    </div>
     <article id="post-content"></article>
   </main>
 </div>
